--- a/数据科学与工程算法基础.md
+++ b/数据科学与工程算法基础.md
@@ -30,11 +30,78 @@ Recall:
 
 ## 第二章 抽样算法
 
+##### 系统抽样
 
+###### 直线等距抽样
+
+$N=nk$ 时,间距为k。
+
+###### 循环(圆形)等距抽样
+
+$N\neq nk$ 时,间距为k,将N个数据排列成首尾相接的圆形。
+
+##### 分层抽样
+
+K层，总体N，抽样样本数n
+
+###### 等额样本
+
+$$
+n_i=\frac{n}{K}
+$$
+
+
+
+###### 按比例分配
+
+$$
+n_i=n\times \frac{N_i}{N}
+$$
+
+
+
+###### 奈曼分配法
+
+$$
+n_i=n\times \frac{N_iS_i}{\sum_iN_iS_i}
+$$
+
+
+
+###### 经济分配法
+
+每层抽样代价$C_i$
+$$
+n_i=n\times \frac{N_iS_i /C_i}{\sum_iN_iS_i/C_i}
+$$
+
+##### 水库抽样
 
 
 
 ## 第三章 尾概率不等式
+
+###### Markov不等式
+
+$$
+P(X\geq a)\leq \frac{E(X)}{a} ,\ a>0
+$$
+
+###### Chebyshev不等式
+
+$$
+P(|X-E(X)|\geq r)\leq \frac{Var(X)}{r^2}
+$$
+
+###### Chernoff不等式
+
+伯努利随机变量,$X_i$是样本空间$\Omega$上的n个独立贝努里随机变量，且$P(X_i=1)=p_i$,令$X=\sum_{i=1}^{n}X_i和\mu=\sum_{i=1}^{n}p_i$,对于任意小的$\delta\in (0,1)$,有
+$$
+P(X<(1-\delta)\mu)<e^{\frac{-\mu \delta^2}{2}}\\
+P(X>(1+\delta)\mu)<e^{\frac{-\mu \delta^2}{4}}
+$$
+
+###### Morris算法
 
 
 
